Fixed scoreboard rendering and updated design

--- a/public/current.html
+++ b/public/current.html
@@ -47,7 +47,7 @@
 </head>
 <body>
   <div class="stage">
-    <video id="feed" autoplay playsinline muted controls></video>
+    <video id="feed" autoplay playsinline muted></video>
     <div id="playerName">—</div>
   </div>
 
