--- a/public/current.html
+++ b/public/current.html
@@ -5,9 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Current Focus Feed</title>
   <style>
+    html,
     body {
       margin: 0;
-      background: #000;
+      height: 100%;
+      background: transparent;
       overflow: hidden;
     }
 
@@ -18,43 +20,28 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background: #000;
+      background: transparent;
     }
 
     #feed {
       width: 100vw;
       height: 100vh;
       object-fit: cover;
-    }
-
-    #playerName {
-      position: absolute;
-      bottom: 24px;
-      left: 50%;
-      transform: translateX(-50%);
-      padding: 12px 32px;
-      background: rgba(0, 0, 0, 0.55);
-      color: #ffd93d;
-      border-radius: 999px;
-      font-size: 1.5rem;
-      letter-spacing: 0.05em;
-      text-transform: uppercase;
-      min-width: 220px;
-      text-align: center;
-      backdrop-filter: blur(6px);
+      background: transparent;
+      transition: opacity 120ms ease;
+      opacity: 0;
+      visibility: hidden;
     }
   </style>
 </head>
 <body>
   <div class="stage">
     <video id="feed" autoplay playsinline muted></video>
-    <div id="playerName">—</div>
   </div>
 
   <script>
     document.addEventListener("DOMContentLoaded", () => {
       const video = document.getElementById("feed");
-      const nameBanner = document.getElementById("playerName");
       const wsUrl = (location.protocol === "https:" ? "wss://" : "ws://") + location.host;
       const ICE_SERVERS = [{ urls: "stun:stun.l.google.com:19302" }];
 
@@ -70,16 +57,20 @@
         return `viewer-${Date.now()}-${connectionCounter}`;
       }
 
-      function setFocusLabel(name) {
-        nameBanner.textContent = name || "—";
-      }
-
       function setVideoStream(stream) {
         const current = video.srcObject;
         if (current && current !== stream) {
           current.getTracks().forEach((track) => track.stop());
         }
-        video.srcObject = stream || null;
+        if (stream) {
+          video.srcObject = stream;
+          video.style.opacity = "1";
+          video.style.visibility = "visible";
+        } else {
+          video.srcObject = null;
+          video.style.opacity = "0";
+          video.style.visibility = "hidden";
+        }
       }
 
       function sendSignal(payload) {
@@ -253,8 +244,6 @@
                 setVideoStream(null);
               }
             }
-
-            setFocusLabel(desiredFocus);
             maybeStartPeer();
             break;
           }
