--- a/public/team-t.html
+++ b/public/team-t.html
@@ -76,11 +76,15 @@
       justify-content: center;
     }
 
+    .frame video,
     .frame img {
       width: 100%;
       height: 100%;
       object-fit: cover;
-      display: block;
+    }
+
+    .frame video {
+      display: none;
     }
 
     .placeholder {
@@ -101,7 +105,7 @@
       display: flex;
     }
 
-    .slot.no-feed img {
+    .slot.no-feed video {
       opacity: 0;
     }
 
